fix export files
